--- a/index.html
+++ b/index.html
@@ -71,13 +71,28 @@
         <div class="news-section">
             <div class="news-blocks">
                 <div class="news-block" style="background-image: url(); background-position: center; background-repeat: no-repeat; background-size: cover;" >
-                    <h1>Заголовок</h1>
-                    <p>Сама новость</p>
-                    <button>Просмотр</button>
+                    <h1>В России вынесли первый приговор за продажу аккаунтов каршеринга</h1>
+                    <p>
+                        В конце 2020 года в России вынесли первый приговор за
+                        продажу аккаунтов каршеринга. Приморский районный 
+                        суд Петербурга оштрафовал гражданина РФ
+                        на 50 тыс. рублей.
+                    </p>
+                    <div style="position: relative; bottom: 0; right: 0;">
+                        <button>Просмотр</button>
+                    </div>
+                    
                 </div>
                 <div class="news-block" style="background-image: url(); background-position: center; background-repeat: no-repeat; background-size: cover;" >
-                    <h1>Заголовок</h1>
-                    <p>Сама новость</p>
+                    <h1>Программа поддержки каршеринга не 
+                        заработала из-за российского телематического 
+                        оборудования
+                    </h1>
+                    <p>25 августа 2020 года стало известно о том, что программа 
+                        поддержки каршеринга, которая была анонсирована ещё 
+                        в апреле на совещании у президента РФ Владимира Путина, 
+                        так и не заработала.
+                    </p>
                     <button>Просмотр</button>
                 </div>
                 <div class="news-block" style="background-image: url(); background-position: center; background-repeat: no-repeat; background-size: cover;" >
