почти окно входа

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Styles/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:opsz@14..32&display=swap" rel="stylesheet">
@@ -70,7 +70,7 @@
 
         <div class="news-section">
             <div class="news-blocks">
-                <div class="news-block" style="background-image: url(); background-position: center; background-repeat: no-repeat; background-size: cover;" >
+                <div class="news-block" style="background-image:url(/Photo/firefox_Xvx2efaAmi.jpg); background: linear-gradient(rgba(123,155,213,0.1)); background-position: center; background-repeat: no-repeat; background-size: cover;" >
                     <h1>В России вынесли первый приговор за продажу аккаунтов каршеринга</h1>
                     <p>
                         В конце 2020 года в России вынесли первый приговор за
@@ -96,13 +96,20 @@
                     <button>Просмотр</button>
                 </div>
                 <div class="news-block" style="background-image: url(); background-position: center; background-repeat: no-repeat; background-size: cover;" >
-                    <h1>Заголовок</h1>
-                    <p>Сама новость</p>
+                    <h1>Мошенничество с данными клиентов</h1>
+                    <p>По сообщениям на июль 2020 г каршеринг становится отличным
+                        помощником для мошенников. С помощью селфи клиентов 
+                        с паспортом на людей берут кредиты в микрофинансовых компаниях.
+                    </p>
                     <button>Просмотр</button>
                 </div>
                 <div class="news-block" style="background-image: url(); background-position: center; background-repeat: no-repeat; background-size: cover;" >
-                    <h1>Заголовок</h1>
-                    <p>Сама новость</p>
+                    <h1>Столичный каршеринг обвинил Роспотребнадзор в блокировке деятельности.</h1>
+                    <p>К аршеринг не может возобновить работу по докоронавирусному
+                        сценарию из-за отсутствия предписаний Роспотребнадзора. 
+                        Представители сервисов обвинили ведомство в блокировке их 
+                        деятельности и 9 июня направили коллективное обращение.
+                    </p>
                     <button>Просмотр</button>
                 </div>
                 
