Сделал половину от работы

--- a/profile.html
+++ b/profile.html
@@ -23,22 +23,65 @@
             </div>
         </div>
 
-        <div class="login">
-            <form class="login-form" action="">
-                <h1 style="margin: 0 0 10px 0; text-align: center; color: #5080D7;">Вход</h1>
-                <div>
-                    <p style="margin: 4px;">Телефон</p>
-                    <input type="text">
+        <div class="profile-info">
+            <div class="client-img">
+                <img src="" alt="Фото нет">
+            </div>
+            <div class="client-info-section">
+                <div class="client-info">
+                    <p style="color: #5080D7; text-align: center; font-weight: bold; font-size: 20px; margin: 0;">Это вы</p>
+                    <div>
+                        <p> Гусынин</p>
+                    </div>
+                    <div>
+                        <p>Алексей</p>
+                    </div>
+                    <div>
+                        <p>Александрович</p>
+                    </div>
+                    <div>
+                        <p>01 01</p>
+                    </div>
+                    <div>
+                        <p>101 111</p>
+                    </div>
+                    <div>
+                        <p>+7 (996) 707-30-30</p>
+                    </div>
+                    <div>
+                        <p>06.07.2007</p>
+                    </div>
+                    <div>
+                        <button>Банковские карты</button>
+                    </div>
                 </div>
-                <div style="margin-bottom: 20px;">
-                    <p style="margin: 4px;">Пароль</p>
-                    <input type="password">
+                <button class="logout-button" style="margin: 20px 0 20px 0; border: 1px solid #5080D7; color: #5080D7;">Выйти</button>
+            </div>
+        </div>
+
+        <div style="display: flex; width: 100%; justify-content: center;">
+            <p style="width: 80%; color: #5080D7; font-size: 20px;margin: 0 0 10px 0;">Активные бронирования</p>
+        </div>
+        <div class="active-rent">
+            <div class="active-rent-section">
+                <div class="active-rent-div">
+                    <div>
+                        <p>Код бронирования -</p>
+                    </div>
+                    <div>
+                        <p>Идентификатор авто - A000AA</p>
+                    </div>
+                    <div>
+                        <p>Марка -</p>
+                    </div>
+                    <div>
+                        <p>Дата бронирования -</p>
+                    </div>
+                    <div>
+                        <p>Филиал -</p>
+                    </div>
                 </div>
-                <div class="login-button">
-                    <button>Войти</button>
-                    <a href="registration.html">Нет аккаунта?</a>
-                </div>
-            </form>
+            </div>
         </div>
 
         <div class="basement">
