--- a/registration.html
+++ b/registration.html
@@ -23,20 +23,56 @@
             </div>
         </div>
 
-        <div class="login">
-            <form class="login-form" action="">
-                <h1 style="margin: 0 0 10px 0; text-align: center; color: #5080D7;">Вход</h1>
-                <div>
-                    <p style="margin: 4px;">Телефон</p>
-                    <input type="text">
+        <div class="reg">
+            <form class="reg-form" action="">
+                <h1 style="margin: 0 0 10px 0; text-align: center; color: #5080D7;">Регистрация</h1>
+                <div class="reg-inputs">
+                    <div>
+                        <div>
+                            <p>Фамилия</p>
+                            <input type="text">
+                        </div>
+                        <div>
+                            <p>Имя</p>
+                            <input type="text">
+                        </div>
+                        <div>
+                            <p>Отчество</p>
+                            <input type="text">
+                        </div>
+                        <div>
+                            <p>Пароль</p>
+                            <input type="password">
+                        </div>
+                        <div>
+                            <p>Повтор пароля</p>
+                            <input type="password">
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <p>Серия паспорта</p>
+                            <input type="text">
+                        </div>
+                        <div>
+                            <p>Номер паспорта</p>
+                            <input type="text">
+                        </div>
+                        <div>
+                            <p>Телефон</p>
+                            <input type="text">
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <p>Дата рождения</p>
+                            <input type="date" style="width: 156px; height: 16px;">
+                        </div>
+                    </div>
                 </div>
-                <div style="margin-bottom: 20px;">
-                    <p style="margin: 4px;">Пароль</p>
-                    <input type="password">
-                </div>
-                <div class="login-button">
-                    <button>Войти</button>
-                    <a href="registration.html">Нет аккаунта?</a>
+                <div class="reg-button">
+                    <button>Регистрация</button>
+                    <a href="login.html">Уже есть аккаунт?</a>
                 </div>
             </form>
         </div>
