--- a/cards.html
+++ b/cards.html
@@ -10,28 +10,67 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="main">
-        <div class="head">
+    
+    <main class="main">
+        <header class="head">
             <div>
                 <p style="color: #5080D7; margin: 0; font-size: 30px;">Index</p>
                 <p style="margin: 0; font-size: 30px;">Drive</p>
             </div>
-            <div class="head-links">
+            <nav class="head-links">
                 <a class="small-border" href="profile.html">Личный кабинет</a>
                 <a class="small-border" href="rent.html">Бронирование</a>
                 <a class="small-border" href="branches.html">Филиалы</a>
-            </div>
-        </div>
+            </nav>
+        </header>
 
         <div class="cards-title">
             <p>Банковские карты</p>
         </div>
 
-        <div>
-            
+        <div class="modalwin" id="modalwin">
+            <div class="modal">
+                <button class="close-btn" id="closebtn">X</button>
+                <h1>ПИВЕТ</h1>
+            </div>
         </div>
 
-        <div class="basement">
+        <div class="cards-section">
+            <div class="cards">
+                <div class="card">
+                    <div style="display: flex; text-align: center; align-items: center;">
+                        <img src="/Photo/mastercard.png" alt="MasterCard">
+                        <p>**** **** **** 1234</p>
+                    </div>
+                    <div style="display: grid; grid-template-columns: repeat(1, 1fr); padding: 15px;">
+                        <div>
+                            <p style="color: green;">Активна</p>
+                        </div>
+                        <div style="display: flex; justify-content: end; align-items: end;">
+                            <button>Закрыть</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div style="display: flex; text-align: center; align-items: center;">
+                        <img src="/Photo/mastercard.png" alt="MasterCard">
+                        <p>**** **** **** 1234</p>
+                    </div>
+                    <div style="display: grid; grid-template-columns: repeat(1, 1fr); padding: 15px; ">
+                        <div>
+                            <p style="color: red;">Закончился срок обслуживания</p>
+                        </div>
+                        <div style="display: flex; justify-content: end; align-items: end;">
+                            <button>Закрыть</button>
+                        </div>
+                    </div>
+                </div>                   
+                    <button class="openbtn">Добавить карту</button>
+                </div>
+            </div>
+        </div>
+
+        <footer class="basement">
             <div class="basement-info">
                 <div>
                     <p>Телефон</p>
@@ -43,7 +82,7 @@
                 </div>
             </div>
 
-            <div class="basement-navigation">
+            <nav class="basement-navigation">
                 <div style="display: grid; justify-content: center; width: 51%; row-gap: 5px;">
                     <a href="login.html">Вход</a>
                     <a href="registration.html">Регистрация</a>
@@ -57,8 +96,9 @@
                     <a href="rent-history.html">История бронирования</a>
                     <a href="cards.html">Банковские карты</a>
                 </div>
-            </div>
-        </div>
-    </div>
+            </nav>
+        </footer>
+    </main>
+    <script src="modalwin.js"></script>
 </body>
 </html>
