--- a/rent.html
+++ b/rent.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="main">
-        <div class="head">
+        <header class="head">
             <div>
                 <p style="color: #5080D7; margin: 0; font-size: 30px;">Index</p>
                 <p style="margin: 0; font-size: 30px;">Drive</p>
@@ -21,7 +21,7 @@
                 <a class="small-border" href="rent.html">Бронирование</a>
                 <a class="small-border" href="branches.html">Филиалы</a>
             </div>
-        </div>
+        </header>
 
         <div class="promo-section">
             <h1 style="font-style: italic; color: #5080D7; margin: 15px 0 0 0;">!!!АКЦИЯ!!!</h1>
@@ -117,7 +117,7 @@
             <button>Забронировать</button>
         </div>
         
-        <div class="basement">
+        <footer class="basement">
             <div class="basement-info">
                 <div>
                     <p>Телефон</p>
@@ -144,7 +144,7 @@
                     <a href="cards.html">Банковские карты</a>
                 </div>
             </div>
-        </div>
+        </footer>
     </div>
 </body>
 </html>
