--- a/catalog.html
+++ b/catalog.html
@@ -69,52 +69,33 @@
             </div>
         </form>
 
-        <div class="news-section">
-            <div class="news-blocks">
-                <div class="news-block" style="background-image:url(/Photo/firefox_Xvx2efaAmi.jpg); background: linear-gradient(rgba(123,155,213,0.1)); background-position: center; background-repeat: no-repeat; background-size: cover;" >
-                    <h1>В России вынесли первый приговор за продажу аккаунтов каршеринга</h1>
-                    <p>
-                        В конце 2020 года в России вынесли первый приговор за
-                        продажу аккаунтов каршеринга. Приморский районный 
-                        суд Петербурга оштрафовал гражданина РФ
-                        на 50 тыс. рублей.
-                    </p>
-                    <div style="position: relative; bottom: 0; right: 0;">
-                        <button>Просмотр</button>
+        <div class="catalog">
+            <div class="catalog-sections">
+                <div class="catalog-section">
+                    <div class="catalog-info">
+                        <img src="/Photo/firefox_Xvx2efaAmi.jpg" alt="">
+                        <p>Марка - sdlfkgm</p>
+                        <p>Модель - sdflk;gk</p>
                     </div>
-                        
+                    <div class="catalog-conf-btn">
+                        <button>1600 Руб</button>
+                        <p>22 400 Руб за 14 дней</p>
+                    </div>
                 </div>
-                <div class="news-block" style="background-image: url(); background-position: center; background-repeat: no-repeat; background-size: cover;" >
-                    <h1>Программа поддержки каршеринга не 
-                        заработала из-за российского телематического 
-                        оборудования
-                    </h1>
-                    <p>25 августа 2020 года стало известно о том, что программа 
-                        поддержки каршеринга, которая была анонсирована ещё 
-                        в апреле на совещании у президента РФ Владимира Путина, 
-                        так и не заработала.
-                    </p>
-                    <button>Просмотр</button>
+                <div class="catalog-section">
+                    <div class="catalog-info">
+                        <img src="/Photo/firefox_Xvx2efaAmi.jpg" alt="">
+                        <p>Марка - sdlfkgm</p>
+                        <p>Модель - sdflk;gk</p>
+                    </div>
+                    <div class="catalog-conf-btn">
+                        <button>1600 Руб</button>
+                        <p>22 400 Руб за 14 дней</p>
+                    </div>
                 </div>
-                <div class="news-block" style="background-image: url(); background-position: center; background-repeat: no-repeat; background-size: cover;" >
-                    <h1>Мошенничество с данными клиентов</h1>
-                    <p>По сообщениям на июль 2020 г каршеринг становится отличным
-                        помощником для мошенников. С помощью селфи клиентов 
-                        с паспортом на людей берут кредиты в микрофинансовых компаниях.
-                    </p>
-                    <button>Просмотр</button>
-                </div>
-                <div class="news-block" style="background-image: url(); background-position: center; background-repeat: no-repeat; background-size: cover;" >
-                    <h1>Столичный каршеринг обвинил Роспотребнадзор в блокировке деятельности.</h1>
-                    <p>К аршеринг не может возобновить работу по докоронавирусному
-                        сценарию из-за отсутствия предписаний Роспотребнадзора. 
-                        Представители сервисов обвинили ведомство в блокировке их 
-                        деятельности и 9 июня направили коллективное обращение.
-                    </p>
-                    <button>Просмотр</button>
-                </div>                       
             </div>
-        </div>    
+        </div>
+
     </main>
         
     <footer class="basement">
