--- a/profile.html
+++ b/profile.html
@@ -10,19 +10,19 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="main">
-        <div class="head">
-            <div>
-                <p style="color: #5080D7; margin: 0; font-size: 30px;">Index</p>
-                <p style="margin: 0; font-size: 30px;">Drive</p>
-            </div>
-            <div class="head-links">
-                <a class="small-border" href="profile.html">Личный кабинет</a>
-                <a class="small-border" href="rent.html">Бронирование</a>
-                <a class="small-border" href="branches.html">Филиалы</a>
-            </div>
+    <header class="head">
+        <div>
+            <p style="color: #5080D7; margin: 0; font-size: 30px;">Index</p>
+            <p style="margin: 0; font-size: 30px;">Drive</p>
         </div>
+        <div class="head-links">
+            <a class="small-border" href="profile.html">Личный кабинет</a>
+            <a class="small-border" href="rent.html">Бронирование</a>
+            <a class="small-border" href="branches.html">Филиалы</a>
+        </div>
+    </header>
 
+    <main>
         <div class="profile-info">
             <div class="client-img">
                 <img src="" alt="Фото нет">
@@ -83,35 +83,34 @@
                 </div>
             </div>
         </div>
+    </main>
 
-        <div class="basement">
-            <div class="basement-info">
-                <div>
-                    <p>Телефон</p>
-                    <p>8 (800) 555-35-35</p>
-                </div>
-                <div>
-                    <p>E-mail</p>
-                    <p>IndexDrive@gmail.com</p>
-                </div>
+    <footer class="basement">
+        <div class="basement-info">
+            <div>
+                <p>Телефон</p>
+                <p>8 (800) 555-35-35</p>
             </div>
-
-            <div class="basement-navigation">
-                <div style="display: grid; justify-content: center; width: 51%; row-gap: 5px;">
-                    <a href="login.html">Вход</a>
-                    <a href="registration.html">Регистрация</a>
-                </div>
-                <div style="display: grid; width: 49%; row-gap: 5px;">
-                    <a href="index.html">Главная</a>
-                    <a href="profile.html">Личный кабинет</a>
-                    <a href="catalog.html">Каталог</a>
-                    <a href="rent.html">Бронирование</a>
-                    <a href="branches.html">Филиалы</a>
-                    <a href="rent-history.html">История бронирования</a>
-                    <a href="cards.html">Банковские карты</a>
-                </div>
+            <div>
+                <p>E-mail</p>
+                <p>IndexDrive@gmail.com</p>
             </div>
         </div>
-    </div>
+        <div class="basement-navigation">
+            <div style="display: grid; justify-content: center; width: 51%; row-gap: 5px;">
+                <a href="login.html">Вход</a>
+                <a href="registration.html">Регистрация</a>
+            </div>
+            <div style="display: grid; width: 49%; row-gap: 5px;">
+                <a href="index.html">Главная</a>
+                <a href="profile.html">Личный кабинет</a>
+                <a href="catalog.html">Каталог</a>
+                <a href="rent.html">Бронирование</a>
+                <a href="branches.html">Филиалы</a>
+                <a href="rent-history.html">История бронирования</a>
+                <a href="cards.html">Банковские карты</a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
