--- a/rent.html
+++ b/rent.html
@@ -10,23 +10,22 @@
     <title>Index Drive - Аренда надёжных авто</title>
 </head>
 <body>
-    <div class="main">
-        <header class="head">
-            <div>
-                <p style="color: #5080D7; margin: 0; font-size: 30px;">Index</p>
-                <p style="margin: 0; font-size: 30px;">Drive</p>
-            </div>
-            <div class="head-links">
-                <a class="small-border" href="profile.html">Личный кабинет</a>
-                <a class="small-border" href="rent.html">Бронирование</a>
-                <a class="small-border" href="branches.html">Филиалы</a>
-            </div>
-        </header>
+    <header class="head">
+        <div>
+            <p style="color: #5080D7; margin: 0; font-size: 30px;">Index</p>
+            <p style="margin: 0; font-size: 30px;">Drive</p>
+        </div>
+        <div class="head-links">
+            <a class="small-border" href="profile.html">Личный кабинет</a>
+            <a class="small-border" href="rent.html">Бронирование</a>
+            <a class="small-border" href="branches.html">Филиалы</a>
+        </div>
+    </header>
 
+    <main>
         <div class="promo-section">
             <h1 style="font-style: italic; color: #5080D7; margin: 15px 0 0 0;">!!!АКЦИЯ!!!</h1>
             <p style="margin: 0 0 15px 0;">Каждые 3 дня бронирования скидка 5% <br> Максимальная скидка 25%</p>
-
         </div>
 
         <div class="rent-forms">
@@ -116,35 +115,35 @@
             <p style="margin: 5px 0 15px 0;">Общая стоимость -</p>
             <button>Забронировать</button>
         </div>
+    </main>
         
-        <footer class="basement">
-            <div class="basement-info">
-                <div>
-                    <p>Телефон</p>
-                    <p>8 (800) 555-35-35</p>
-                </div>
-                <div>
-                    <p>E-mail</p>
-                    <p>IndexDrive@gmail.com</p>
-                </div>
+    <footer class="basement">
+        <div class="basement-info">
+            <div>
+                <p>Телефон</p>
+                <p>8 (800) 555-35-35</p>
             </div>
+            <div>
+                <p>E-mail</p>
+                <p>IndexDrive@gmail.com</p>
+            </div>
+        </div>
 
-            <div class="basement-navigation">
-                <div style="display: grid; justify-content: center; width: 51%; row-gap: 5px;">
-                    <a href="login.html">Вход</a>
-                    <a href="registration.html">Регистрация</a>
-                </div>
-                <div style="display: grid; width: 49%; row-gap: 5px;">
-                    <a href="index.html">Главная</a>
-                    <a href="profile.html">Личный кабинет</a>
-                    <a href="catalog.html">Каталог</a>
-                    <a href="rent.html">Бронирование</a>
-                    <a href="branches.html">Филиалы</a>
-                    <a href="rent-history.html">История бронирования</a>
-                    <a href="cards.html">Банковские карты</a>
-                </div>
+        <div class="basement-navigation">
+            <div style="display: grid; justify-content: center; width: 51%; row-gap: 5px;">
+                <a href="login.html">Вход</a>
+                <a href="registration.html">Регистрация</a>
             </div>
-        </footer>
-    </div>
+            <div style="display: grid; width: 49%; row-gap: 5px;">
+                <a href="index.html">Главная</a>
+                <a href="profile.html">Личный кабинет</a>
+                <a href="catalog.html">Каталог</a>
+                <a href="rent.html">Бронирование</a>
+                <a href="branches.html">Филиалы</a>
+                <a href="rent-history.html">История бронирования</a>
+                <a href="cards.html">Банковские карты</a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
